* Version 4.2  "Compressor Road"

Unreleased.  Current line of development.

** Improvements

- All deprecated options and features of version 4.1 have been
  removed.

- The new Graph-Cut algorithm is the default primary seam-line
  generator.

- Avoid a division-by-zero in the Annealing Optimizer.

- Fix a longstanding quirk, which allowed to load masks into Enblend
  and Enfuse that were unsuitable for processing.

- Fix a bug in the highlight-recovery that caused Enfuse to bail out
  with the uncaught exception
      "Minimizer1D::set_bracket: minimum not bracketed".

- The OpenMP enabled versions of Enblend and Enfuse benefit from
  Google's TCMalloc library.

- Several exposure weight functions were added to Enfuse.  The choice
  is now up to the user.  The default still is the Gauss function as
  in all Enfuse versions before.

- Enblend and Enfuse now both can make use of the tremendous computing
  power in modern graphics cards.  To that end the binaries must be
  compiled with OpenCL support and the necessary drivers and or
  libraries must be installed on the host system.


** New Commandline Options

- Calling Enblend or Enfuse with `--show-software-components' will
  show the compiler name and version along will the versions of all
  important libraries against which the binaries were compiled.

- The new options `--show-globbing-algorithms',
  `--show-image-formats', and `--show-signature' now display the
  information that previously was requested with `--version
  --verbose'.  The output of `--help' has been regrouped to account
  for the new diversity of information options.

- Option `--exposure-weight-function' makes Enfuse's exposure weight
  function user selectable.  Previously weight function "gauss" was
  the only one (and hard-coded).

- The old Enfuse options `--exposure-mu' and `--exposure-sigma' got
  siblings called `--exposure-optimum' and `--exposure-width'
  respectively.  With exposure weight functions other than Gauss the